CSS changes: - fixed an issue that was causing the clear filter button to wrap onto the line below the filter bar - fixed an issue that was causing the images in ul.hits on the map to not load on initial viewing (they would load if you clicked the marker a second time) - hid the footer on map view
Script changes:
- added a simple jquery function to add the class 'map' to the body when map view is enabled

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -497,6 +497,7 @@ header .user_actions .list_property {
     width: 641px;
     .listing_image {
       position: relative;
+      overflow-y:hidden;
       h3 {
         font-weight: 400;
         width: 100%;
@@ -828,7 +829,7 @@ ul#items {
   position: relative;
   background: #74b164;
   form {
-    width: 750px;
+    width: 795px;
     float:left;
     display: block;
     font-family: "open_sans_regular", sans-serif;
@@ -1714,7 +1715,7 @@ ul.hits {
     }
     img {
       margin-right: 20px;
-      height: 100%;
+      height: 100px;
       width: 150px;
     }
     i {
@@ -2046,4 +2047,10 @@ li.ui-state-focus {
 }
 .admin .select2-container .select2-selection--single {
   height:auto!important;
+}
+body.map {
+  margin:0;
+  footer {
+    display:none;
+  }
 }
